@@ -2246,7 +2246,7 @@ for help with detailed comparisons~\cite{comparison} with
 {\tt SUSPECT}, {\tt ISAJET} and {\tt SPHENO},
 S.~Akula, P.~Athron, M.~Baak, M.~Badziak, 
 G.~B\'elanger, F.~Borzumati, F.~Boudjema, F.~Brummer, M.~Catalan, A.~Casas, 
-M.~Eads, H.~Eberl, J.~Evans,
+M.~Eads, H.~Eberl, J.~Evans, R.~Franceschini,
 M.~Hamer, M.~Hussain,
 J.~Hetherington, M.~Ibe, M.~Iskrzynski, J.~Kersten, S.~Knapen, S.~Kom,
 S.~Krippendorf, S.~Kulkarni, D.~Kunz, K.~Ishikawa, 
