@@ -1,3 +1,4 @@
+<li> 14/7/15 Fixed flavoured GMSB SLHA control: thanks to R Franceschini
 <li> 19/6/15 Made sfermion mixing in SLHA output the *tree-level* mixing at MSUSY: better defined theoretically and more useful
 <li> 02/5/15 Better error trapping after bail-out of main iteration. Thanks to P Millet
 <li> 29/5/15 Use exact field combination mixture for mA(1) in 2-loop tadpoles and protect against nans in pseudoscalar NMSSM calculations
